# pap_yaskawa_ws

./: .cursorignore  .gitignore  README.md  frames_2026-03-26_16.35.22.gv  frames_2026-04-21_06.55.18.gv
.cursor/rules/: Yaskawa-robot-project.mdc  language.mdc
docs/: CLEANUP_REPORT.md  CLEANUP_STEP1_REPORT.md  PHASE3_MIGRATION.md  PHASE4.md  VISION_ARCHITECTURE.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gp7_bringup/share/gp7_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gp7_description/share/gp7_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
scripts/: run_fake_sim_test.sh
src/gp7_bringup/: CMakeLists.txt  README.md  package.xml
src/gp7_bringup/config/: gp7_controller.yaml  motion_scaling.yaml
src/gp7_bringup/launch/: display.launch.py  main.launch.py  real_mode.launch.py  sim_mode.launch.py
src/gp7_bringup/rviz/: rviz.rviz
src/gp7_bringup/src/: trajectory_debug_node.cpp
src/gp7_description/: CMakeLists.txt  README.md  package.xml
src/gp7_description/config/: initial_positions.yaml  joint_names_gp7.yaml
src/gp7_description/launch/: display.launch
src/gp7_description/legacy/: README.md
src/gp7_description/meshes/: base_link.STL  end_effector.STL  link_b.STL  link_l.STL  link_r.STL  link_s.STL  link_t.STL  link_u.STL
src/gp7_description/meshes/Collision/: link_b.STL  link_t.STL
src/gp7_description/meshes/Visual/: link_s.STL  link_u.STL
src/gp7_description/models/conveyor_belt/: model.config  model.sdf
src/gp7_description/models/mini_stacking_box2/: model.config  model.sdf
src/gp7_description/models/mini_stacking_box2/meshes/: mini_stacking_box2.dae
src/gp7_description/models/table/: model.config  model.sdf
src/gp7_description/models/table/meshes/: table.STL  table.dae
src/gp7_description/rviz/: display.rviz
src/gp7_description/urdf/: arm.xacro  gazebo.xacro  gp7_yaskawa.real.xacro  gp7_yaskawa.ros2_control.xacro  gp7_yaskawa.ros2_control_fake.xacro  gp7_yaskawa.urdf  gp7_yaskawa.urdf.xacro  gp7_yaskawa_fake.urdf.xacro
src/gp7_gazebo_classic/: CMakeLists.txt  README.md
src/gp7_gazebo_classic/config/: sim_vision_camera.yaml
src/gp7_gazebo_classic/launch/: gazebo_display.launch.py  sim_moveit.launch.py  sim_moveit_vision_rgbd.launch.py
src/gp7_gazebo_classic/worlds/: model.world  table.world  world_test.world  world_test1.world
src/gp7_gui/: CMakeLists.txt  README.md  package.xml  rosdep.yaml  setup.cfg  setup.py
src/gp7_gui/config/: gui_modes.yaml
src/gp7_gui/gp7_gui/: gui_main.py  launch_manager.py  setup.cfg
src/gp7_gui/launch/: gui.launch.py
src/gp7_handeye_calibration/: CMakeLists.txt  README.md  package.xml
src/gp7_handeye_calibration/config/: handeye_params.yaml
src/gp7_handeye_calibration/launch/: handeye_stub.launch.py
src/gp7_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/gp7_moveit_config/config/: gp7_yaskawa.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers_real.yaml  moveit_real_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/gp7_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_fake_hardware.launch.py  moveit_real.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/gp7_moveit_config/legacy/: README.md
src/gp7_moveit_config/scripts/: verify_plan_execute.py
src/gp7_task_executor/: CMakeLists.txt  README.md  package.xml
src/gp7_task_executor/config/: cartesian_points.yaml  joint_waypoints.yaml  pose_waypoints.yaml  task_executor.yaml
src/gp7_task_executor/include/gp7_task_executor/: planner_utils.h  transform_utils.h  visualization_utils.h  waypoint_loader.h
src/gp7_task_executor/launch/: task_executor.launch.py
src/gp7_task_executor/src/: planner_utils.cpp  task_executor_node.cpp  transform_utils.cpp  visualization_utils.cpp  waypoint_loader.cpp
src/gp7_task_executor_msgs/: CMakeLists.txt  README.md
src/gp7_task_executor_msgs/srv/: MoveCartesianSequence.srv  MoveSequence.srv  MoveToCartesianTarget.srv  MoveToJointTarget.srv  MoveToNamedCartesianTarget.srv  MoveToNamedPoseTarget.srv
src/gp7_vision_bringup/: CMakeLists.txt  README.md
src/gp7_vision_bringup/config/: d435_realsense.yaml  d435_realsense_launch_args.yaml  d435_topic_contract.yaml
src/gp7_vision_bringup/launch/: realsense_d435.launch.py  static_tf_camera.launch.py  vision_bringup.launch.py  vision_debug.launch.py  vision_sim_rgbd.launch.py
src/gp7_vision_bringup/scripts/: check_realsense_topics.bash
src/gp7_vision_gazebo_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
src/gp7_vision_gazebo_bridge/config/: bridge_node_params.yaml  test_publisher_params.yaml  test_publisher_params_scenario_b.yaml
src/gp7_vision_gazebo_bridge/gp7_vision_gazebo_bridge/: __init__.py  box_spawn_bridge_node.py  box_test_publisher_node.py
src/gp7_vision_gazebo_bridge/launch/: bridge_standalone.launch.py  bridge_test.launch.py
src/gp7_vision_gazebo_bridge/scripts/: box_spawn_bridge_node  box_test_publisher_node
src/gp7_vision_pipeline/: CMakeLists.txt  README.md  setup.cfg  setup.py
src/gp7_vision_pipeline/config/: realsense_depth_debug.yaml  vision_pipeline.yaml  vision_sim_rgbd.yaml  yolo_box_detector.yaml  yolo_model.yaml
src/gp7_vision_pipeline/gp7_vision_pipeline/: __init__.py  detection_visualizer.py  vision_pipeline_placeholder_node.py
src/gp7_vision_pipeline/launch/: vision_pipeline.launch.py  yolo_box_detector.launch.py
src/gp7_vision_pipeline/model/box_train_v2/: args.yaml  results.csv
src/gp7_vision_pipeline/model/box_train_v2/weights/: README.md
src/gp7_vision_pipeline/models/: README.md
src/gp7_vision_pipeline/scripts/: realsense_depth_debug  vision_pipeline_placeholder  yolo_box_detector_node
(+419 files in other folders)
